// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GenderField /> matches snapshot 1`] = `
<select
  class="sc-idOhPF gSNtny"
  id="genderField"
  name="name"
  type="text"
>
  <option
    class="sc-hHftDr bhxQtR"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="male"
  >
    mężczyzna
  </option>
  <option
    value="female"
  >
    kobieta
  </option>
</select>
`;

exports[`<GenderField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF emkUjz"
          id="genderField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="male"
          >
            mężczyzna
          </option>
          <option
            value="female"
          >
            kobieta
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<GenderField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF gSNtny"
          id="genderField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="male"
          >
            mężczyzna
          </option>
          <option
            value="female"
          >
            kobieta
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<GenderField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF emkUjz"
          id="genderField"
          name="name"
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="male"
          >
            mężczyzna
          </option>
          <option
            value="female"
          >
            kobieta
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
